Handle initial ramp events scheduled in the past

When a linear or exponential ramp is scheduled and there are no
preceeding events, a setValueAtTime event is supposed to be inserted
with the current value and current time.

But when the ramp is scheduled in the past, the setValue event happens
after the ramp event, basically negating the effect of the ramp.

To fix this, set the time for the setValueAtTime event to 0 to insure
it preceeds the ramp time.  When new events are processed to clamp the
start times to current time, these will all get updated and sorted in
the correct order.

the-audioparam-interface/retrospective-exponentialRampToValueAtTime.html,
the-audioparam-interface/retrospective-linearRampToValueAtTime.html

Bug: 812301, 626703
Change-Id: I1c6ea4e8aaeb2cd9159c23ae5c8981d56a98f0b9
Tests: 
Reviewed-on: https://chromium-review.googlesource.com/926702
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538640}
Former-commit-id: 91d3eb7a5f18c8596f92f5f1a8cc579cb4e4d34c